fixed flex wrap and adjusted files

--- a/imagesheet.css
+++ b/imagesheet.css
@@ -1,7 +1,7 @@
 .img-row{
 	display:flex;
 	justify-content: space-around;
-	width:80%;
+	width:100%;
 	margin:auto;
 	padding-left:5%;
 	padding-right:5%;
